# freebsd-crossbuild

./: CMakeLists.txt  heimdal_vers.c  nbtool_config.h.cmake
cmake/: AddCrossbuildExecutable.cmake  FindLibBSD.cmake  FindLibRoken.cmake
contrib/com_err/: .gitrepo  compile_et.c
contrib/libc-pwcache/: .gitrepo  pwcache.c
contrib/libnetbsd/: .gitrepo  pthread.h  util.h
contrib/mknod/: .gitrepo
contrib/mtree/: .gitrepo
contrib/rpggen/: .gitrepo
include/: grp.h  libutil.h  pwd.h
include/common/: grp.h  libc_private.h  namespace.h  pre-include.h  pthread.h  pwd.h  un-namespace.h
include/common/sys/: cdefs.h  mman.h  param.h  types.h
include/linux/: db.h  dlfcn.h  fcntl.h  histedit.h  nbtool_config.h  pre-include.h  pthread.h  pthread_np.h  regex.h  setent.c  signal.h  unistd.h  vis.h  wctype.h
include/linux/sys/: _types.h  endian.h  param.h  stat.h  sysctl.h
include/mac/: libutil.h  nbtool_config.h  pre-include.h  pthread_np.h  signal.h  stdlib.h  string.h  strtonum.c  unistd.h  utimensat.h
include/mac/sys/: ctype.h  endian.h  limits.h  stat.h
include/sys/: endian.h
lib/: CMakeLists.txt  fake-_dynamic-symbol.c
lib/libdb/: CMakeLists.txt
lib/libmd/: CMakeLists.txt  md4hl.c  md5hl.c  rmd160hl.c  sha0hl.c  sha1hl.c  sha256hl.c  sha384hl.c  sha512hl.c  sha512thl.c  skein1024hl.c  skein256hl.c  skein512hl.c
src/: sysctl.py
src/awk/: CMakeLists.txt
src/compile_et/: CMakeLists.txt
src/config/: CMakeLists.txt
src/expr/: CMakeLists.txt
src/file2c/: CMakeLists.txt
src/find/: CMakeLists.txt
src/grep/: CMakeLists.txt
src/lex/: CMakeLists.txt  config.h.cmake
src/m4/: CMakeLists.txt
src/makefs/: CMakeLists.txt
src/mkdb/: CMakeLists.txt
src/mtree/: CMakeLists.txt
src/rpcgen/: CMakeLists.txt
src/sed/: CMakeLists.txt
src/sh/: CMakeLists.txt  awk.in  mktemp.in  sed.in
src/sort/: CMakeLists.txt
src/xinstall/: CMakeLists.txt
src/yacc/: CMakeLists.txt
